vendor/ocaml/testsuite/tests/letrec-disallowed/module_constraints.ml.reference

# module type S = sig val y : float end
# module type T = sig val x : float val y : float end
# type t = T : (module S) -> t
#     Characters 13-51:
  let rec x = let module M = (val m) in T (module M)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This kind of expression is not allowed as right-hand side of `let rec'
# 
